# rust-email-newsletter

./: Cargo.toml
.github/workflows/: scheduled-audit.yml
src/: lib.rs  main.rs
tests/: health_check.rs
