[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["Dmitry Melnikov <d.dash.mv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "email_newsletter_main"

[dependencies]
actix-web = "4.0.0-beta.4"

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11.2"
tokio = "1.4.0"
